<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2E5B4"
    android:scrollbarSize="16dp"
    tools:context=".unitconverter">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="143dp"
        android:layout_height="127dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/sho"
        android:contentDescription="@string/jn" />

    <Button
        android:id="@+id/length"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:backgroundTint="#060505"
        android:scrollbarSize="16dp"
        android:text="@string/kl"
        android:textColor="#F2E5B4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <Button
        android:id="@+id/area"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:backgroundTint="#010101"
        android:scrollbarSize="16dp"
        android:text="@string/area"
        android:textColor="#F2E5B4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="142dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445"
        app:srcCompat="@drawable/rr"
        android:contentDescription="@string/kj" />

    <Button
        android:id="@+id/temperature"
        android:layout_width="175dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#060505"
        android:text="@string/temperature"
        android:textColor="#F2E5B4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="147dp"
        android:layout_height="170dp"
        android:contentDescription="@string/h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469"
        app:srcCompat="@drawable/vol" />

    <Button
        android:id="@+id/volume"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:backgroundTint="#060505"
        android:text="@string/volume"
        android:textColor="#F2E5B4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="148dp"
        android:layout_height="111dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994"
        app:srcCompat="@drawable/mass"
        android:contentDescription="@string/hj" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="141dp"
        android:layout_height="145dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speedd"
        android:contentDescription="@string/mk" />

    <Button
        android:id="@+id/mass"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#060505"
        android:text="@string/mass"
        android:textColor="#F2E5B4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/speed"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#060505"
        android:text="@string/speed"
        android:textColor="#F2E5B4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="132dp"
        android:layout_height="167dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/op"
        android:contentDescription="@string/kk" />

</androidx.constraintlayout.widget.ConstraintLayout>